--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "chat example",
   "type": "commonjs",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "socket.io": "^4.8.1",
     "y": "^0.3.2"
